--- a/styles/style.css
+++ b/styles/style.css
@@ -79,3 +79,140 @@ body {
     background: rgba(13, 19, 33, 0.02);
 }
 
+.development-section-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 80px 97px 80px 97px;
+}
+
+.development-section-content h1 {
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 32px;
+    font-weight: 800;
+    margin-bottom: 24px;
+}
+
+.development-section-content p {
+    color: rgb(13, 19, 33);
+    opacity: 0.7;
+    font-family: Azeret Mono;
+    font-size: 16px;
+    font-weight: 400;
+    text-align: center;
+}
+
+.codding-section {
+    width: 946px;
+    height: 336px;
+    margin: 0 auto;
+    border-radius: 16px;
+    background: linear-gradient(90.00deg, rgb(255, 255, 255), rgba(255, 255, 255, 0) 100%);
+}
+
+.codding-section-content {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    padding-top: 45px;
+}
+
+.leftside-content {
+    width: 50%;
+    height: 240px;
+    margin-right: 40px;
+}
+
+.leftside-content h1 {
+    color: rgba(13, 19, 33, 0.7);
+    font-family: Azeret Mono;
+    font-size: 24px;
+    font-weight: 700;
+    margin-bottom: 16px;
+    margin-top: 10px;
+}
+
+.leftside-content p {
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 16px;
+    font-weight: 400;
+    opacity: 0.7;
+    margin-bottom: 32px;
+
+}
+
+.codding-button {
+    font-weight: bold;
+    font-size: 20px;
+    padding: 15px 25px;
+    border: border: 1px solid rgb(13, 19, 33);
+    opacity: 0.7;
+    background-color: white;
+    font-family: Azeret Mono;
+}
+
+.rightside-content {
+    width: 30%;
+    height: 240px;
+}
+
+.rightside-content img {
+    width: 100%;
+    height: 100%;
+}
+
+.creating-section {
+    width: 946px;
+    height: 336px;
+    margin: 32px auto 0 auto;
+    border-radius: 16px;
+    background: linear-gradient(270.00deg, rgb(255, 255, 255), rgba(255, 255, 255, 0) 100%);
+}
+
+.creating-section-content {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    padding-top: 45px;
+}
+
+.leftside-creating-content {
+    width: 30%;
+    height: 240px;
+    margin-right: 40px;
+}
+
+.leftside-creating-content img {
+    width: 80%;
+    height: 90%;
+
+}
+
+.rightside-creating-content {
+    width: 50%;
+    height: 240px;
+}
+
+.rightside-creating-content h1 {
+    color: rgba(13, 19, 33, 0.7);
+    font-family: Azeret Mono;
+    font-size: 24px;
+    font-weight: 700;
+    margin-bottom: 16px;
+    margin-top: 10px;
+}
+
+.rightside-creating-content p {
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 16px;
+    font-weight: 400;
+    opacity: 0.7;
+    margin-bottom: 32px;
+}
+
