--- a/styles/style.css
+++ b/styles/style.css
@@ -193,8 +193,8 @@ body {
 }
 
 .leftside-creating-content img {
-    width: 80%;
-    height: 90%;
+    width: 85%;
+    height: 100%;
 
 }
 
@@ -490,7 +490,6 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    
     background-color: rgba(0, 0, 0, 0.5);
     background-blend-mode: overlay;
 }
@@ -558,4 +557,48 @@ body {
     border-radius: 8px;
     border: none;
 
+}
+
+/* footer style  */
+
+.footer-container {
+    width: 1440px;
+    height: 100px;
+    margin: 80px auto 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 16px;
+    background: rgba(13, 19, 33, 0.03);
+}
+
+.footer-content {
+    width: 1140px;
+    height: 36px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.footer-content p {
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 20px;
+    font-weight: 600;
+    margin-top: 6.5px;
+    margin-bottom: 6.5px;
+}
+
+.social-icon {
+    width: 157.01px;
+    height: 36px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.social-icon img {
+    width: 36px;
+    height: 36px;
 }
