--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
     height: 652px;
     /* border: 3px solid red; */
     margin: 0 auto;
-    background-image: url(./assets/Hero-bg.png);
+    background-image: url(../assets/Hero-bg.png);
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -482,7 +482,7 @@ body {
     width: 1140px;
     height: 313px;
     margin: 50px auto 0 auto;
-    background-image: url(./assets/handshake.jpg);
+    background-image: url(/assets/handshake.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     border-radius: 16px;
